<resources>
    <string name="app_name">Bedrock</string>

    <string name="title_settings">Settings</string>
    <string name="title_setup">Setup</string>

    <string name="category_about">About</string>

    <string name="developer_url" translatable="false">https://www.github.com/tytydraco</string>
    <string name="contact_url" translatable="false">mailto:tylernij@gmail.com?subject=Bedrock%20Support</string>

    <string name="loading_dialog_title">Working</string>

    <string name="snackbar_intent_failed">Could not handle this action</string>
    <string name="snackbar_exception">Something went wrong; try again later</string>
    <string name="snackbar_sign_in_failed">Failed to sign-in to Google.</string>
    <string name="snackbar_bad_folder">This folder doesn\'t look right. Make sure to select the correct directory.</string>
    <string name="snackbar_drive_access_failed">Failed to acquire access to Google Drive.</string>

    <string name="confirm_dialog_title">Confirm changes</string>
    <string name="confirm_dialog_upload_message">Are you sure you want to upload your local files to the cloud?</string>
    <string name="confirm_dialog_download_message">Are you sure you want to download your cloud files?</string>
    <string name="confirm_dialog_upload_all_message">Are you sure you want to upload all of your local files to the cloud?</string>
    <string name="confirm_dialog_download_all_message">Are you sure you want to download all of your cloud files?</string>
    <string name="confirm_dialog_delete_device_message">Are you sure you want to erase your device files?</string>
    <string name="confirm_dialog_delete_cloud_message">Are you sure you want to erase your cloud files?</string>
    <string name="confirm_dialog_delete_device_all_message">Are you sure you want to erase all your device files?</string>
    <string name="confirm_dialog_delete_cloud_all_message">Are you sure you want to erase all your cloud files?</string>

    <string name="saf_help_dialog_title">Help</string>
    <string name="saf_help_dialog_message">Make sure that your Minecraft File Storage setting (Settings->Profile->File Storage Location) is set to \"External\" and not \"Application\". Apps are not allowed to access the \"Application\" worlds.</string>

    <string name="saf_export_dialog_title">Export</string>
    <string name="saf_export_dialog_message">Is your minecraftWorlds folder missing? Here\'s how to export your worlds so that Bedrock can access them.\n\nUsing ADB, run this command, then check for the folder again:\n\nadb shell cp -ra /sdcard/Android/com.mojang.minecraftpe/files/games/com.mojang/minecraftWorlds/ /sdcard/</string>

    <string name="dialog_button_okay">Okay</string>
    <string name="dialog_button_support">Support</string>
    <string name="dialog_button_yes">Yes</string>
    <string name="dialog_button_no">No</string>

    <string name="setup_sign_in">Sign-in to Google and grant Google Drive access to continue</string>
    <string name="setup_saf">This app needs access to your Minecraft Worlds folder.\n\nSelect the <b>/sdcard/games/com.mojang/minecraftWorlds</b> folder.<b>\n\nNOTE: Microsoft is planning on deprecating this soon.</b></string>
    <string name="setup_saf_export">This app needs access to your Minecraft Worlds folder.\n\nSelect the <b>/sdcard/games/com.mojang/minecraftWorlds</b> folder.<b>\n\nNOTE: Microsoft is planning on deprecating this soon.</b></string>

    <string name="desc_status_phone">Stored locally</string>
    <string name="desc_status_cloud">Stored on the cloud</string>
    <string name="desc_sign_in">Sign-in</string>
    <string name="desc_saf">File access</string>
    <string name="desc_grant">Grant</string>
    <string name="desc_upload">Upload to cloud</string>
    <string name="desc_download">Download to device</string>
    <string name="desc_delete_device">Delete from device</string>
    <string name="desc_delete_cloud">Delete from cloud</string>

    <string name="pref_developer_title">Developer</string>
    <string name="pref_developer_summary" translatable="false">Tyler Nijmeh</string>
    <string name="pref_developer_key" translatable="false">developer</string>

    <string name="pref_contact_title">Contact</string>
    <string name="pref_contact_summary">Email me with questions, comments, and concerns</string>
    <string name="pref_contact_key" translatable="false">contact</string>

    <string name="pref_licenses_title">Licenses</string>
    <string name="pref_licenses_summary">View the open source licenses</string>
    <string name="pref_licenses_key" translatable="false">licenses</string>

    <string name="menu_action_settings">Settings</string>
    <string name="menu_action_upload_all">Upload all</string>
    <string name="menu_action_download_all">Download all</string>
    <string name="menu_action_delete_device_all">Delete all from device</string>
    <string name="menu_action_delete_cloud_all">Delete all from cloud</string>

    <string name="no_worlds">No worlds found :(</string>

    <string name="button_help">Help</string>
    <string name="button_export">Export</string>

    <string name="working_uploading">Uploading world to cloud</string>
    <string name="working_downloading">Downloading world to device</string>
    <string name="working_delete_device">Deleting world from device</string>
    <string name="working_delete_cloud">Deleting world from cloud</string>
    <string name="working_updating_world_list">Refreshing world list</string>

    <string name="pref_file" translatable="false">preferences</string>
    <string name="pref_key_verified" translatable="false">verified</string>
</resources>