<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/settings"
        android:icon="@drawable/ic_baseline_settings_24"
        android:title="@string/menu_action_settings"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/upload_all"
        android:title="@string/menu_action_upload_all"
        app:showAsAction="withText" />
    <item
        android:id="@+id/download_all"
        android:title="@string/menu_action_download_all"
        app:showAsAction="withText" />
    <item
        android:id="@+id/delete_device_all"
        android:title="@string/menu_action_delete_device_all"
        app:showAsAction="withText" />
    <item
        android:id="@+id/delete_cloud_all"
        android:title="@string/menu_action_delete_cloud_all"
        app:showAsAction="withText" />
</menu>