<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Bedrock.SetupImageTextPair"
        android:gravity="center"
        android:layout_centerVertical="true"
        android:orientation="vertical">
        <ImageView
            android:layout_width="@dimen/setup_image_size"
            android:layout_height="@dimen/setup_image_size"
            android:src="@drawable/ic_baseline_folder_24"
            android:contentDescription="@string/desc_saf" />
        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TextAppearance.MaterialComponents.Body1"
            android:textAlignment="center"
            android:text="@string/setup_saf" />
    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/grant"
        style="@style/Widget.Bedrock.FloatingActionButton"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:src="@drawable/ic_baseline_check_24"
        android:contentDescription="@string/desc_grant" />
</RelativeLayout>