<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    style="@style/Widget.Bedrock.CardView">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/recycler_item_padding">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/status_icons"
                android:gravity="center_vertical"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:id="@+id/status_phone"
                    style="@style/Bedrock.ImageView"
                    android:src="@drawable/ic_baseline_smartphone_24"
                    android:contentDescription="@string/desc_status_phone" />
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:id="@+id/status_cloud"
                    style="@style/Bedrock.ImageView"
                    android:src="@drawable/ic_baseline_cloud_24"
                    android:contentDescription="@string/desc_status_cloud" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginHorizontal="@dimen/recycler_item_text_horizontal_margin">
                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/name"
                    style="@style/TextAppearance.MaterialComponents.Body1"
                    android:maxLines="1"
                    android:ellipsize="end" />
                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/id"
                    style="@style/TextAppearance.MaterialComponents.Caption"
                    android:maxLines="1"
                    android:ellipsize="end" />
            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/divider_height"
            style="@style/Bedrock.Divider" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/buttons"
            android:gravity="center_vertical"
            android:orientation="horizontal">
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/delete_device"
                style="@style/Widget.Bedrock.ImageButton"
                android:src="@drawable/ic_baseline_phonelink_erase_24"
                android:contentDescription="@string/desc_delete_device" />
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/delete_cloud"
                style="@style/Widget.Bedrock.ImageButton"
                android:src="@drawable/ic_baseline_cloud_off_24"
                android:contentDescription="@string/desc_delete_cloud" />
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/upload"
                style="@style/Widget.Bedrock.ImageButton"
                android:src="@drawable/ic_baseline_upload_24"
                android:contentDescription="@string/desc_upload" />
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/download"
                style="@style/Widget.Bedrock.ImageButton"
                android:src="@drawable/ic_baseline_download_24"
                android:contentDescription="@string/desc_download" />
        </LinearLayout>
    </LinearLayout>
</com.google.android.material.card.MaterialCardView>